<resources>
    <string name="app_name">My Story Teller</string>
    <string name="content">Story Content</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="want_to_add_story">Add Story?</string>
    <string name="story">Stories</string>
    <string name="add_story">Add Story</string>
    <string name="speek">Speek</string>
    <string name="speak">Speak</string>
    <string name="stop">Stop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Admin Login</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to My Story Teller</string>
    <string name="login_as">"Login As A : "</string>
    <string name="admin1">Admin</string>
    <string name="user">User</string>
    <string name="read">Read</string>
    <string name="story_detail">Story Details</string>
    <string name="update">Update Story</string>
</resources>