<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity"
    android:padding="16dp"
    android:background="@mipmap/fancy_background"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_corners">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/admin"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="20dp" />



    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:padding="8dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:padding="8dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textSize="18sp"
        />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
