<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@mipmap/fancy_background"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:layout_gravity="center"
                android:elevation="8dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/rounded_corners">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:paddingTop="20dp" />





                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_as"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

                <Button
                    android:id="@+id/btn_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/admin1"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />
                <Button
                    android:id="@+id/btn_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/user"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>