<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@mipmap/fancy_background"
    tools:context=".Update">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_gravity="center"
            android:elevation="8dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_corners">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@mipmap/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:paddingTop="20dp" />



            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/title"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:padding="8dp" />

            <EditText
                android:id="@+id/edt_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/author"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:padding="8dp" />
            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/content"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                android:padding="8dp" />

            <Button
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/update"
                android:layout_gravity="center"
                android:textSize="18sp"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>